# MM-Det

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MODEL_ARCHITECTURE.md  README.md  README_DOCKER.md  SUBMISSION_GUIDE.md  builder.py  docker-compose.yml  download_models.md  launch-test.sh  launch-train.sh  prepare_mm_cpu.py  prepare_mm_representations.py  prepare_reconstructed_dataset.py  prepare_submission.sh  requirements.txt  task.ipynb  test.py  test_cpu.py  train.py
.claude/: settings.local.json
LLaVA/: pyproject.toml
LLaVA/llava/model/: builder.py
LLaVA/llava/model/language_model/: llava_llama.py
LLaVA/llava/model/multimodal_encoder/: clip_encoder.py
LLaVA/scripts/v1_5/: finetune_task_lora_llava-1.5-7b_rfrd.sh
data/rfrd/: readme.md
dataset/: __init__.py  process.py  readme.md  utils.py  vdataset.py
llava-7b-1.5-rfrd/: config.json
model/deep-fake-detector-v2-model/: README.md
models/: MMDet.py  __init__.py
models/vit/: frequency_enhancer.py  resnetv2.py  stv_transformer_hybrid.py  vision_transformer.py
options/: base_options.py  test_options.py  train_options.py
splits/: train.json  val.json
utils/: trainer.py  utils.py
weights/: README.md  config.json  generation_config.json  preprocessor_config.json
